Fix navbar break point to never wrap to new line

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -33,8 +33,9 @@
 }
 .nav-item-font {
    font-family: $font-nav-items;
-   letter-spacing: 2px;
+   letter-spacing: 1.8px;
    color: $color-link !important;
+
 }
 
 .collapsed-logo {
